# ppo-on-grid2op

./: .gitignore  README.md  pyproject.toml
colab_training_notebooks/: train_baseline.ipynb  train_improv_reward.ipynb  train_maskable.ipynb  train_maskable_reward.ipynb
notebooks/: agent_evaluation.ipynb  plots.ipynb
notebooks/reproducibility_notebooks/: train_graph.ipynb  train_graph_reward.ipynb  train_maskable_graph.ipynb
presentation_data/plotting/: PPO_best_baseline_env=l2rpn_case14_sandbox_iterations=10000_2025-09-14_15_16_50_PPO_1.csv  PPO_best_graph_reward_env=l2rpn_case14_sandbox_iterations=10000_2025-09-15_20_54_44_PPO_1.csv  PPO_best_maskable_graph_reward_env=l2rpn_case14_sandbox_iterations=10000_2025-09-15_18_51_44_PPO_1.csv  PPO_best_maskable_reward_env=l2rpn_case14_sandbox_iterations=10000_2025-09-14_20_37_50_PPO_1.csv  PPO_best_reward_env=l2rpn_case14_sandbox_iterations=10000_2025-09-14_17_06_53_PPO_1.csv
reproducibility_notebooks/: train_baseline.ipynb  train_improv_reward.ipynb  train_maskable.ipynb  train_maskable_graph_reward.ipynb  train_maskable_reward.ipynb
src/ppo_on_grid2op/: baseline.py  env_utils.py  env_with_heuristics.py  gnn_policy.py  graph_gym_obs_space.py  maskable_sb3_agent.py  masked_env.py  run_expert_systems_baselines.py  topological_ppo_evaluation.py  topological_ppo_training.py  topological_ppo_tuning.py  train_baseline.py  trial_eval_callback.py  (+1 more)
tests/: test_baseline.py  test_graph_ppo.py  test_maskable_ppo.py  test_topological_ppo.py
tuning_logs/: study_PPO_2025-09-14_00:16:40.csv  study_PPO_2025-09-14_01:09:42.csv
(+957 files in other folders)
