[project]
name = "ppo-on-grid2op"
version = "0.1.0"
description = "PPO experiments on grid2op"
readme = "README.md"
authors = [
    { name = "dpaletti", email = "danielepaletti98@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "grid2op>=1.12.1",
    "gymnasium>=1.2.0",
    "l2rpn-baselines>=0.8.0",
    "lightsim2grid>=0.10.3",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "optuna>=4.5.0",
    "stable-baselines3[extra]>=2.7.0",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
]

[tool.pyrefly]

#### configuring what to type check and where to import from
project-includes = ["src"]
search-path = ["src"]
site-package-path = [".venv/lib/python3.13/site-packages"]



